--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <link rel="pagination" href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.css">
     <link rel="stylesheet" href="assets/scss/all.css">
 
 <body>
@@ -46,8 +45,8 @@
                 <img src="assets/images/btn_goTop.png" alt="gotoTop" class="position-absolute bottom-0 end-0">
             </div>
             <!--分頁-->
-            <nav aria-label="page navigation example ">
-                <ul class="pagination justify-content-center fw-bold">
+            <nav aria-label="page navigation example" >
+                <ul class="pagination justify-content-center fw-bold" id="pageid">
                    
                 </ul>
             </nav>
@@ -70,8 +69,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"
         integrity="sha512-lTLt+W7MrmDfKam+r3D2LURu0F47a3QaW5nF0c6Hl0JDZ57ruei+ovbg7BrZ+0bjVJ5YgzsAWE+RreERbpPE1g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"></script>
     <script src="all.js"></script>
 </body>
 
